--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,23 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1d706b76-3455-4b3b-b1a5-c17cdecc1741",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41aa4fe6755441b19d09fec6f7af85cc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'AutoModelForCausalLM' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m model \u001b[38;5;241m=\u001b[39m AutoModelForCausalLM\u001b[38;5;241m.\u001b[39mfrom_pretrained(model_id, torch_dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mbfloat16, device_map\u001b[38;5;241m=\u001b[39mdevice)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'AutoModelForCausalLM' is not defined"
+     ]
     }
    ],
    "source": [
@@ -44,29 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3eccc1e4-c2aa-40ee-90ea-27245e6bce59",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': 'Hello what are you?\\n\\nI am a 20 year old student from the Netherlands. I am currently studying at the University of Amsterdam.'}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generation_pipeline = pipeline(task=\"text-generation\",\n",
     "                               model = model, tokenizer = tokenizer)\n",
@@ -76,91 +54,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d9f21820-4532-403e-8034-fae58070506e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': 'Hello what is capital of pakistan?\\n\\nThe capital of Pakistan is Islamabad.\\n\\nIslamabad is the capital of Pakistan.\\n\\nI'}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generation_pipeline(\"Hello what is capital of pakistan?\", max_new_tokens=25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7a1c0104-89f4-42a8-aac6-bf02b7ca2b02",
    "metadata": {},
    "outputs": [],
    "source": [
     "def response(query):\n",
     "    if query==\"Who are you?\":\n",
-    "        return \"I am Law Assist. I am designed to help people solve their income tax problems.\"\n",
+    "        return \"Greetings! I am Law Assist, your intelligent legal companion, meticulously designed to guide you through the complexities of income tax regulations. Leveraging advanced AI capabilities, I am here to provide clear, reliable, and personalized support to help you navigate tax laws, understand your obligations, and find effective solutions to your income tax-related challenges. Whether you have questions about filing, deductions, legal procedures, or compliance, I am committed to making the legal landscape easier to understand, ensuring you make informed decisions with confidence.\"\n",
     "    else:\n",
     "        return generation_pipeline(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "02ac462b-1086-4d16-8ef1-519ac979c639",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'I am Law Assist. I am designed to help people solve their income tax problems.'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response(\"Who are you?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d9f3ae8e-83d9-4609-9b14-f53af6f6c582",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': 'What are the my legal rights if I am getting fined for over speeding?\\n\\n- The police can issue a fixed penalty notice for speeding.\\n- The police'}]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "response(\"What are the my legal rights if I am getting fined for over speeding\")"
    ]
@@ -190,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
